{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 680,
  "lineage": "d5d92a7b-1afe-15b0-ddd5-4f79028f6084",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "evrim-dev-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:905418331516:instance/i-09332f7aa948a9541",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8ebbe48d728fcdc",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-09332f7aa948a9541",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c5362bb0f56e4e3",
            "private_dns": "ip-10-0-4-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8ebbe48d728fcdc",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038df0d110ce0b305",
            "tags": {
              "Name": "Private Evrim Dev Server"
            },
            "tags_all": {
              "Name": "Private Evrim Dev Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02194df5effcae756",
              "sg-0b8915cfa01a8c97e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.evrim-dev-server-private",
            "aws_security_group.evrim-dev-ui-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "evrim-dev-server-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1",
            "arn_suffix": "net/evrim-dev-server-lb/b26660ff02b385a1",
            "dns_name": "evrim-dev-server-lb-b26660ff02b385a1.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "evrim-dev-server-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038df0d110ce0b305"
              },
              {
                "subnet_id": "subnet-04d848488ae14a4ed"
              },
              {
                "subnet_id": "subnet-0b5dfd8bd91932d4d"
              }
            ],
            "subnets": [
              "subnet-038df0d110ce0b305",
              "subnet-04d848488ae14a4ed",
              "subnet-0b5dfd8bd91932d4d"
            ],
            "tags": {
              "Name": "Evrim Dev Server LB"
            },
            "tags_all": {
              "Name": "Evrim Dev Server LB"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "evrim-dev-server-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:listener/net/evrim-dev-server-lb/b26660ff02b385a1/f5db638044814a19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-server-tg/f44168dde85fadfe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:listener/net/evrim-dev-server-lb/b26660ff02b385a1/f5db638044814a19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.evrim-dev-server-lb",
            "aws_lb_target_group.evrim-dev-server-tg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "evrim-ui-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:listener/net/evrim-dev-server-lb/b26660ff02b385a1/34eab506776740fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:listener/net/evrim-dev-server-lb/b26660ff02b385a1/34eab506776740fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.evrim-dev-server-lb",
            "aws_lb_target_group.evrim-ui-tg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "evrim-dev-server-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-server-tg/f44168dde85fadfe",
            "arn_suffix": "targetgroup/evrim-dev-server-tg/f44168dde85fadfe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/ht/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-server-tg/f44168dde85fadfe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "evrim-dev-server-tg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "evrim-ui-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a",
            "arn_suffix": "targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/prod/ui/login/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:905418331516:loadbalancer/net/evrim-dev-server-lb/b26660ff02b385a1"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "evrim-dev-ui-tg",
            "port": 3000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "evrim-dev-server-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-server-tg/f44168dde85fadfe-2024090622500808940000000e",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-server-tg/f44168dde85fadfe",
            "target_id": "i-09332f7aa948a9541"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.evrim-dev-server",
            "aws_lb_target_group.evrim-dev-server-tg",
            "aws_security_group.evrim-dev-server-private",
            "aws_security_group.evrim-dev-ui-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "evrim-ui-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a-20241007171104987400000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418331516:targetgroup/evrim-dev-ui-tg/bc8228bc08e7851a",
            "target_id": "i-09332f7aa948a9541"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.evrim-dev-server",
            "aws_lb_target_group.evrim-ui-tg",
            "aws_security_group.evrim-dev-server-private",
            "aws_security_group.evrim-dev-ui-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "evrim-dev-server-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:security-group/sg-02194df5effcae756",
            "description": "Allow API Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02194df5effcae756",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Healthchecks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "evrim-dev-server-private",
            "name_prefix": "",
            "owner_id": "905418331516",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "evrim-dev-ui-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:security-group/sg-0b8915cfa01a8c97e",
            "description": "Allow UI Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8915cfa01a8c97e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Healthchecks",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "evrim-dev-ui-private",
            "name_prefix": "",
            "owner_id": "905418331516",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:security-group/sg-0eb924f5fe15904e3",
            "description": "Allow SSM traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb924f5fe15904e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_ssm",
            "name_prefix": "",
            "owner_id": "905418331516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Instance"
            },
            "tags_all": {
              "Name": "Private Instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:vpc-endpoint/vpce-06ee83f62d6087964",
            "dns_entry": [
              {
                "dns_name": "vpce-06ee83f62d6087964-5989uatd.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06ee83f62d6087964-5989uatd-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06ee83f62d6087964-5989uatd-us-east-1c.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06ee83f62d6087964-5989uatd-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04772713C0UA0S43UD6F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06ee83f62d6087964",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0290391353802f3b2",
              "eni-0a5aeca9d2442a03f",
              "eni-0babd393768731541"
            ],
            "owner_id": "905418331516",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0eb924f5fe15904e3"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.65",
                "subnet_id": "subnet-038df0d110ce0b305"
              },
              {
                "ipv4": "10.0.5.191",
                "subnet_id": "subnet-04d848488ae14a4ed"
              },
              {
                "ipv4": "10.0.6.185",
                "subnet_id": "subnet-0b5dfd8bd91932d4d"
              }
            ],
            "subnet_ids": [
              "subnet-038df0d110ce0b305",
              "subnet-04d848488ae14a4ed",
              "subnet-0b5dfd8bd91932d4d"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "aws_security_group.ssm_https",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:vpc-endpoint/vpce-08c06e09b0647efec",
            "dns_entry": [
              {
                "dns_name": "vpce-08c06e09b0647efec-lwkmxn6j.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c06e09b0647efec-lwkmxn6j-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c06e09b0647efec-lwkmxn6j-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c06e09b0647efec-lwkmxn6j-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02648553BKJN8V1OQZ8T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08c06e09b0647efec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04dfa55ab6340daf0",
              "eni-06d7ea73c7f789b4d",
              "eni-0d33c53fcef0f6cab"
            ],
            "owner_id": "905418331516",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0eb924f5fe15904e3"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.197",
                "subnet_id": "subnet-038df0d110ce0b305"
              },
              {
                "ipv4": "10.0.5.56",
                "subnet_id": "subnet-04d848488ae14a4ed"
              },
              {
                "ipv4": "10.0.6.111",
                "subnet_id": "subnet-0b5dfd8bd91932d4d"
              }
            ],
            "subnet_ids": [
              "subnet-038df0d110ce0b305",
              "subnet-04d848488ae14a4ed",
              "subnet-0b5dfd8bd91932d4d"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "aws_security_group.ssm_https",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:vpc-endpoint/vpce-09e6a26b93f778736",
            "dns_entry": [
              {
                "dns_name": "vpce-09e6a26b93f778736-1lnqx3g7.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09e6a26b93f778736-1lnqx3g7-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09e6a26b93f778736-1lnqx3g7-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09e6a26b93f778736-1lnqx3g7-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0564427VLLSRKF7GBGM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09e6a26b93f778736",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-005d1649bacfda146",
              "eni-027472aae7f81da5a",
              "eni-0ab10bfe216d981a2"
            ],
            "owner_id": "905418331516",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0eb924f5fe15904e3"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.4.17",
                "subnet_id": "subnet-038df0d110ce0b305"
              },
              {
                "ipv4": "10.0.5.92",
                "subnet_id": "subnet-04d848488ae14a4ed"
              },
              {
                "ipv4": "10.0.6.36",
                "subnet_id": "subnet-0b5dfd8bd91932d4d"
              }
            ],
            "subnet_ids": [
              "subnet-038df0d110ce0b305",
              "subnet-04d848488ae14a4ed",
              "subnet-0b5dfd8bd91932d4d"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "aws_security_group.ssm_https",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:network-acl/acl-07be06f9f0fb99399",
            "default_network_acl_id": "acl-07be06f9f0fb99399",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07be06f9f0fb99399",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418331516",
            "subnet_ids": [
              "subnet-0102e761eb0f8f926",
              "subnet-02927d1853e56d35d",
              "subnet-038df0d110ce0b305",
              "subnet-04d848488ae14a4ed",
              "subnet-0b5dfd8bd91932d4d",
              "subnet-0cbbe0d8a43416831"
            ],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:route-table/rtb-001f5071af57d7bbf",
            "default_route_table_id": "rtb-001f5071af57d7bbf",
            "id": "rtb-001f5071af57d7bbf",
            "owner_id": "905418331516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:security-group/sg-034d959fd1b64b615",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-034d959fd1b64b615",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "905418331516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8d16d344774be53",
            "arn": "arn:aws:ec2:us-east-1:905418331516:elastic-ip/eipalloc-0c8d16d344774be53",
            "association_id": "eipassoc-0a2a9c0af93e8c998",
            "domain": "vpc",
            "id": "eipalloc-0c8d16d344774be53",
            "network_border_group": "us-east-1",
            "network_interface": "eni-069aa9922f8a7535a",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-35-172-49-134.compute-1.amazonaws.com",
            "public_ip": "35.172.49.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06072611e424cb056",
            "arn": "arn:aws:ec2:us-east-1:905418331516:elastic-ip/eipalloc-06072611e424cb056",
            "association_id": "eipassoc-02a807e3b215ace56",
            "domain": "vpc",
            "id": "eipalloc-06072611e424cb056",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e54d21a5bf49f83",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-75-101-174-227.compute-1.amazonaws.com",
            "public_ip": "75.101.174.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079b4aa13f7e7b7d7",
            "arn": "arn:aws:ec2:us-east-1:905418331516:elastic-ip/eipalloc-079b4aa13f7e7b7d7",
            "association_id": "eipassoc-01e98f18355e86150",
            "domain": "vpc",
            "id": "eipalloc-079b4aa13f7e7b7d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-082003376b09226a3",
            "private_dns": "ip-10-0-3-92.ec2.internal",
            "private_ip": "10.0.3.92",
            "public_dns": "ec2-54-205-24-69.compute-1.amazonaws.com",
            "public_ip": "54.205.24.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:internet-gateway/igw-03c7b09d368cbc605",
            "id": "igw-03c7b09d368cbc605",
            "owner_id": "905418331516",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8d16d344774be53",
            "association_id": "eipassoc-0a2a9c0af93e8c998",
            "connectivity_type": "public",
            "id": "nat-02eafd66b192a6981",
            "network_interface_id": "eni-069aa9922f8a7535a",
            "private_ip": "10.0.1.215",
            "public_ip": "35.172.49.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0102e761eb0f8f926",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06072611e424cb056",
            "association_id": "eipassoc-02a807e3b215ace56",
            "connectivity_type": "public",
            "id": "nat-05b601015f3b38d9a",
            "network_interface_id": "eni-05e54d21a5bf49f83",
            "private_ip": "10.0.2.10",
            "public_ip": "75.101.174.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbbe0d8a43416831",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079b4aa13f7e7b7d7",
            "association_id": "eipassoc-01e98f18355e86150",
            "connectivity_type": "public",
            "id": "nat-07eac1337fc6c9ded",
            "network_interface_id": "eni-082003376b09226a3",
            "private_ip": "10.0.3.92",
            "public_ip": "54.205.24.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02927d1853e56d35d",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7837947b00afa511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02eafd66b192a6981",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7837947b00afa51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f6abc9380f3ab551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05b601015f3b38d9a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f6abc9380f3ab55",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b94b6c720a5b81bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07eac1337fc6c9ded",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b94b6c720a5b81bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c7b09d368cbc605",
            "id": "r-rtb-07d4a04d8d22745061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d4a04d8d2274506",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:route-table/rtb-0b7837947b00afa51",
            "id": "rtb-0b7837947b00afa51",
            "owner_id": "905418331516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02eafd66b192a6981",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:route-table/rtb-06f6abc9380f3ab55",
            "id": "rtb-06f6abc9380f3ab55",
            "owner_id": "905418331516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b601015f3b38d9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:route-table/rtb-0b94b6c720a5b81bf",
            "id": "rtb-0b94b6c720a5b81bf",
            "owner_id": "905418331516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07eac1337fc6c9ded",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:route-table/rtb-07d4a04d8d2274506",
            "id": "rtb-07d4a04d8d2274506",
            "owner_id": "905418331516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c7b09d368cbc605",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05be4768f329340ee",
            "route_table_id": "rtb-0b7837947b00afa51",
            "subnet_id": "subnet-038df0d110ce0b305"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0267ff581a53f00b1",
            "route_table_id": "rtb-06f6abc9380f3ab55",
            "subnet_id": "subnet-04d848488ae14a4ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0737561b742b1eede",
            "route_table_id": "rtb-0b94b6c720a5b81bf",
            "subnet_id": "subnet-0b5dfd8bd91932d4d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd56364753480d9",
            "route_table_id": "rtb-07d4a04d8d2274506",
            "subnet_id": "subnet-0102e761eb0f8f926"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005fa5221a3f904fa",
            "route_table_id": "rtb-07d4a04d8d2274506",
            "subnet_id": "subnet-0cbbe0d8a43416831"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b476e87ca57018",
            "route_table_id": "rtb-07d4a04d8d2274506",
            "subnet_id": "subnet-02927d1853e56d35d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-038df0d110ce0b305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038df0d110ce0b305",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-04d848488ae14a4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d848488ae14a4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-0b5dfd8bd91932d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5dfd8bd91932d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-0102e761eb0f8f926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0102e761eb0f8f926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-0cbbe0d8a43416831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbe0d8a43416831",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:subnet/subnet-02927d1853e56d35d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02927d1853e56d35d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418331516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            },
            "vpc_id": "vpc-06bae81b9f2ab8ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418331516:vpc/vpc-06bae81b9f2ab8ab4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07be06f9f0fb99399",
            "default_route_table_id": "rtb-001f5071af57d7bbf",
            "default_security_group_id": "sg-034d959fd1b64b615",
            "dhcp_options_id": "dopt-0275386e8edaba1bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bae81b9f2ab8ab4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001f5071af57d7bbf",
            "owner_id": "905418331516",
            "tags": {
              "Name": "Evrim Dev"
            },
            "tags_all": {
              "Name": "Evrim Dev"
            }
          }
        }
      ]
    }
  ]
}